generate a nupkg file.

--- a/FileSystemWatcherAlts/FileSystemWatcherAlts.csproj
+++ b/FileSystemWatcherAlts/FileSystemWatcherAlts.csproj
@@ -10,6 +10,7 @@
     <Copyright>Copyright © Shai Shapira 2015</Copyright>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <UseVSHostingProcess>true</UseVSHostingProcess>
